# mingw-copylibs

./: .gitignore  .gitmodules  LICENSE.md  README.md  mingw_copylibs.cmake  mingw_copylibs.sh  mingw_copylibs_install.cmake.in
tests/: CMakeLists.txt  pthreadtest.c  testlib.c  testlib.h
